# unicode-table

./: .editorconfig  .gitignore  .travis.yml  ChangeLog  LICENSE  Makefile  Makefile.am  README.md  config.h.in  configure.ac  generate.pl  test.c  unicode-table.h.in
.github/workflows/: c.yml
src/: Functions.pm  Makefile.am  SpecialCasing.txt  Template.pm  generate.pl  unicode-table.c.in  unicode-table.h.in
test/: Makefile.am  test-case-expanding.c  test-category.c  test-numbers.c  test-special.c  test.h
